# xbox-media-utils

./: .cz.toml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  LICENSE  README.md  opencode.json  pyproject.toml
.github/workflows/: ci.yml
src/xbox_media_utils/: __init__.py  constants.py  ffmpeg.py  files.py  hdr.py  import_.py  media.py  models.py  plex.py  recode.py  subtitles.py
src/xbox_media_utils/api/: __init__.py  plex.py
src/xbox_media_utils/cli/: __init__.py  common.py  import_.py  plex_scan.py  recode.py
src/xbox_media_utils/core/: __init__.py  config.py  locking.py  logging.py
tests/: conftest.py
tests/unit/: test_cli_common.py  test_config.py  test_ffmpeg.py  test_hdr.py  test_import.py  test_locking.py  test_logging.py  test_media.py  test_plex_api.py  test_recode.py
