[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xbox-media-utils"
version = "0.1.0"
description = "Media processing tools for Xbox Series X / Plex Direct Play compatibility"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
keywords = [
    "plex",
    "xbox",
    "media",
    "transcode",
    "hevc",
    "direct-play",
    "ffmpeg",
    "vaapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Archiving",
]
dependencies = [
    "pgsrip>=0.1.10",
    "babelfish>=0.6.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "commitizen>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "types-PyYAML",
    "types-setuptools",
]

[project.scripts]
xbox-recode = "xbox_media_utils.recode:main"
xbox-import = "xbox_media_utils.import_:main"

[project.urls]
Homepage = "https://github.com/xnoto/xbox-media-utils"
Repository = "https://github.com/xnoto/xbox-media-utils"
Issues = "https://github.com/xnoto/xbox-media-utils/issues"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "SIM",   # flake8-simplify (too strict for legacy code)
    "UP007", # Python 3.9 doesn't support X | Y syntax for Optional types
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
follow_imports = "skip"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_ffmpeg: marks tests that require ffmpeg",
]

[tool.coverage.run]
source = ["src/xbox_media_utils"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
